--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: yvoloshin01@gmail.com
 description: "Yury Voloshin's Personal Site"
 baseurl: ""
 url: "http://yvoloshin.github.io"
-title_description: "Specializing in delivering attractive, functional and mobile-responsive websites. Skilled with Ruby on Rails, HTML5, CSS3, JQuery, JavaScript, and more. A former chemical engineer. A life-long learner who enjoys picking up new technology skills and building on familiar ones. Yury lives in Brooklyn, NY with his wife and two daughters."
+title_description: "Specializing in delivering attractive, functional, and mobile-responsive websites. Skilled with Ruby on Rails, HTML5, CSS3, JQuery, JavaScript, and more. A former chemical engineer. A life-long learner who enjoys picking up new technology skills and building on familiar ones. Yury lives in Brooklyn, NY with his wife and two daughters."
 title_image: "http://i.imgur.com/VSI9h3S.jpg"
 google_analytics: "UA-67857103-1"
 disqus_account: yvoloshin
